--- a/website/pages/docs/validators/is.mdx
+++ b/website/pages/docs/validators/is.mdx
@@ -16,9 +16,9 @@ If the `input` value is following type `T`, `true` value would be returned. Othe
 
 <br/>
 <Alert severity="success">
-    <AlertTitle> 
-        **AOT compliation** 
-    </AlertTitle>
+  <AlertTitle> 
+    **AOT compliation** 
+  </AlertTitle>
 
 If you'd used other competitive validator libraries like `ajv` or `class-validator`, you may found that `typia` does not require any extra schema definition. If you have not experienced them, I can sure that you may get shocked after reading below extra schema definition files.
 
@@ -30,67 +30,67 @@ Yeah, `typia` needs only pure TypeScript type. As `typia` is a compiler library,
 </Alert>
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/is.ts" showLineNumbers
 import typia, { tags } from "typia";
 import { v4 } from "uuid";
 
 const matched: boolean = typia.is<IMember>({
-    id: v4(),
-    email: "samchon.github@gmai19l.com",
-    age: 30,
+  id: v4(),
+  email: "samchon.github@gmai19l.com",
+  age: 30,
 });
 
 console.log(matched); // true
 
 interface IMember {
-    id: string & tags.Format<"uuid">;
-    email: string & tags.Format<"email">;
-    age: number 
-        & tags.Type<"uint32"> 
-        & tags.ExclusiveMinimum<19> 
-        & tags.Maximum<100>;
+  id: string & tags.Format<"uuid">;
+  email: string & tags.Format<"email">;
+  age: number &
+    tags.Type<"uint32"> &
+    tags.ExclusiveMinimum<19> &
+    tags.Maximum<100>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/is.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 const typia_1 = __importDefault(require("typia"));
 const uuid_1 = require("uuid");
 const matched = ((input) => {
-    return (
-        "object" === typeof input &&
-        null !== input &&
-        "string" === typeof input.id &&
-        /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-            input.id,
-        ) &&
-        "string" === typeof input.email &&
-        /^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-            input.email,
-        ) &&
-        "number" === typeof input.age &&
-        Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295 &&
-        19 < input.age &&
-        input.age <= 100
-    );
+  return (
+    "object" === typeof input &&
+    null !== input &&
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100
+  );
 })({
-    id: (0, uuid_1.v4)(),
-    email: "samchon.github@gmai19l.com",
-    age: 30,
+  id: (0, uuid_1.v4)(),
+  email: "samchon.github@gmai19l.com",
+  age: 30,
 });
 console.log(matched); // true
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 
@@ -109,16 +109,16 @@ More strict checker prohibiting superfluous properties.
 If you want to prohibit those superfluous properties, you can use `typia.equals<T>()` function instead.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/equals.ts" showLineNumbers
 import typia, { tags } from "typia";
 import { v4 } from "uuid";
 
 const input: unknown = {
-    id: v4(),
-    email: "samchon.github@gmail.com",
-    age: 30,
-    extra: "superfluous property", // extra
+  id: v4(),
+  email: "samchon.github@gmail.com",
+  age: 30,
+  extra: "superfluous property", // extra
 };
 const is: boolean = typia.is<IMember>(input);
 const equals: boolean = typia.equals<IMember>(input);
@@ -126,81 +126,80 @@ const equals: boolean = typia.equals<IMember>(input);
 console.log(is, equals); // true, false
 
 interface IMember {
-    id: string & tags.Format<"uuid">;
-    email: string & tags.Format<"email">;
-    age: number 
-        & tags.Type<"uint32"> 
-        & tags.ExclusiveMinimum<19> 
-        & tags.Maximum<100>;
+  id: string & tags.Format<"uuid">;
+  email: string & tags.Format<"email">;
+  age: number &
+    tags.Type<"uint32"> &
+    tags.ExclusiveMinimum<19> &
+    tags.Maximum<100>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/equals.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 const typia_1 = __importDefault(require("typia"));
 const uuid_1 = require("uuid");
 const input = {
-    id: (0, uuid_1.v4)(),
-    email: "samchon.github@gmail.com",
-    age: 30,
-    extra: "superfluous property", // extra
+  id: (0, uuid_1.v4)(),
+  email: "samchon.github@gmail.com",
+  age: 30,
+  extra: "superfluous property", // extra
 };
 const is = ((input) => {
-    return (
-        "object" === typeof input &&
-        null !== input &&
-        "string" === typeof input.id &&
-        /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-            input.id,
-        ) &&
-        "string" === typeof input.email &&
-        /^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-            input.email,
-        ) &&
-        "number" === typeof input.age &&
-        Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295 &&
-        19 < input.age &&
-        input.age <= 100
-    );
+  return (
+    "object" === typeof input &&
+    null !== input &&
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100
+  );
 })(input);
 const equals = ((input, _exceptionable = true) => {
-    const $io0 = (input, _exceptionable = true) =>
-        "string" === typeof input.id &&
-        /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-            input.id,
-        ) &&
-        "string" === typeof input.email &&
-        /^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-            input.email,
-        ) &&
-        "number" === typeof input.age &&
-        Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295 &&
-        19 < input.age &&
-        input.age <= 100 &&
-        (3 === Object.keys(input).length ||
-            Object.keys(input).every((key) => {
-                if (["id", "email", "age"].some((prop) => key === prop))
-                    return true;
-                const value = input[key];
-                if (undefined === value) return true;
-                return false;
-            }));
-    return "object" === typeof input && null !== input && $io0(input, true);
+  const $io0 = (input, _exceptionable = true) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100 &&
+    (3 === Object.keys(input).length ||
+      Object.keys(input).every((key) => {
+        if (["id", "email", "age"].some((prop) => key === prop)) return true;
+        const value = input[key];
+        if (undefined === value) return true;
+        return false;
+      }));
+  return "object" === typeof input && null !== input && $io0(input, true);
 })(input);
 console.log(is, equals); // true, false
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 
@@ -219,56 +218,56 @@ If you repeat to call `typia.is<T>()` function on the same type, size of JavaScr
 Just look at the code below, then you may understand how to use it.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/createIs.ts" showLineNumbers
 import typia, { tags } from "typia";
 
 export const check = typia.createIs<IMember>();
 
 interface IMember {
-    id: string & tags.Format<"uuid">;
-    email: string & tags.Format<"email">;
-    age: number 
-        & tags.Type<"uint32"> 
-        & tags.ExclusiveMinimum<19> 
-        & tags.Maximum<100>;
+  id: string & tags.Format<"uuid">;
+  email: string & tags.Format<"email">;
+  age: number &
+    tags.Type<"uint32"> &
+    tags.ExclusiveMinimum<19> &
+    tags.Maximum<100>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/createIs.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 exports.check = void 0;
 const typia_1 = __importDefault(require("typia"));
 const check = (input) => {
-    return (
-        "object" === typeof input &&
-        null !== input &&
-        "string" === typeof input.id &&
-        /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-            input.id,
-        ) &&
-        "string" === typeof input.email &&
-        /^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-            input.email,
-        ) &&
-        "number" === typeof input.age &&
-        Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295 &&
-        19 < input.age &&
-        input.age <= 100
-    );
+  return (
+    "object" === typeof input &&
+    null !== input &&
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100
+  );
 };
 exports.check = check;
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 
@@ -288,12 +287,15 @@ When target `input` value is following the type `T`, therefore `true` value be r
 
 ```typescript copy filename="examples/src/is-cast.ts" showLineNumbers
 const input: unknown = {
-    id: v4(),
-    email: "samchon.github@gmail.com",
-    age: 30,
+  id: v4(),
+  email: "samchon.github@gmail.com",
+  age: 30,
 } as any;
-if (typia.is<IMember>(input)) // auto type casting
-    console.log(input.id, input.email, input.age);
+
+if (typia.is<IMember>(input)) {
+  // auto type casting
+  console.log(input.id, input.email, input.age);
+}
 ```
 
 
@@ -324,40 +326,40 @@ If JS native class type like `Date`, `Uint8Array`, or `Map<Key, T>` being utiliz
 Therefore, the `instanceof` statement does not be used only for the user-defined classes.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/is-map.ts" showLineNumbers
 import typia from "typia";
 
 typia.createIs<Map<string, boolean | number | string>>();
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/is-map.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 const typia_1 = __importDefault(require("typia"));
 (input) => {
-    return (
-        input instanceof Map &&
-        (() =>
-            [...input].every(
-                (elem) =>
-                    Array.isArray(elem) &&
-                    elem.length === 2 &&
-                    "string" === typeof elem[0] &&
-                    ("string" === typeof elem[1] ||
-                        "number" === typeof elem[1] ||
-                        "boolean" === typeof elem[1]),
-            ))()
-    );
+  return (
+    input instanceof Map &&
+    (() =>
+      [...input].every(
+        (elem) =>
+          Array.isArray(elem) &&
+          elem.length === 2 &&
+          "string" === typeof elem[0] &&
+          ("string" === typeof elem[1] ||
+            "number" === typeof elem[1] ||
+            "boolean" === typeof elem[1]),
+      ))()
+  );
 };
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 
@@ -377,7 +379,7 @@ If you want to know about such special tags detaily, read below article:
     - [Customization](./tags/#customization)
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/is-custom-tags.ts" showLineNumbers
 import typia, { tags } from "typia";
 
@@ -387,67 +389,67 @@ export const checkSomething = typia.createIs<Something>();
 // DEFINE CUSTOM TYPE TAGS
 //----
 type Dollar = tags.TagBase<{
-    kind: "dollar";
-    target: "string";
-    value: undefined;
-    validate: `$input[0] === "$" && !isNaN(Number($input.substring(1).split(",").join("")))`;
+  kind: "dollar";
+  target: "string";
+  value: undefined;
+  validate: `$input[0] === "$" && !isNaN(Number($input.substring(1).split(",").join("")))`;
 }>;
 
 type Postfix<Value extends string> = tags.TagBase<{
-    kind: "postfix";
-    target: "string";
-    value: Value;
-    validate: `$input.endsWith("${Value}")`;
+  kind: "postfix";
+  target: "string";
+  value: Value;
+  validate: `$input.endsWith("${Value}")`;
 }>;
 
 type IsEven<Value extends number | bigint> = tags.TagBase<{
-    kind: "isEven";
-    target: Value extends number ? "number" : "bigint";
-    value: undefined;
-    validate: `$input % ${Numeric<2>} === ${Numeric<0>}`;
+  kind: "isEven";
+  target: Value extends number ? "number" : "bigint";
+  value: undefined;
+  validate: `$input % ${Numeric<2>} === ${Numeric<0>}`;
 }>;
 
 type Numeric<Value extends number | bigint> = Value extends number
-    ? Value
-    : `BigInt(${Value})`;
+  ? Value
+  : `BigInt(${Value})`;
 
 //----
 // VALIDATION
 //----
 interface Something {
-    dollar: string & Dollar;
-    postfix: string & Postfix<"!!!">;
-    isEven: number & IsEven<number>;
+  dollar: string & Dollar;
+  postfix: string & Postfix<"!!!">;
+  isEven: number & IsEven<number>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/is-comment-tags.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 exports.checkSomething = void 0;
 const typia_1 = __importDefault(require("typia"));
 const checkSomething = (input) => {
-    return (
-        "object" === typeof input &&
-        null !== input &&
-        "string" === typeof input.dollar &&
-        input.dollar[0] === "$" &&
-        !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
-        "string" === typeof input.postfix &&
-        input.postfix.endsWith("!!!") &&
-        "number" === typeof input.isEven &&
-        input.isEven % 2 === 0
-    );
+  return (
+    "object" === typeof input &&
+    null !== input &&
+    "string" === typeof input.dollar &&
+    input.dollar[0] === "$" &&
+    !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
+    "string" === typeof input.postfix &&
+    input.postfix.endsWith("!!!") &&
+    "number" === typeof input.isEven &&
+    input.isEven % 2 === 0
+  );
 };
 exports.checkSomething = checkSomething;
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 
