Fix typo in setup.mdx

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -192,7 +192,7 @@ yarn add -D typescript ts-patch ts-node
 
 If you want to install `typia` manually, just follow the steps.
 
-At first, install `typia` as depepdency. And then, install `typescript`, `ts-patch` and `ts-node` as `devDependencies`.
+At first, install `typia` as dependency. And then, install `typescript`, `ts-patch` and `ts-node` as `devDependencies`.
 
 ```json filename="tsconfig.json" copy showLineNumbers
 {
